[REFACTOR] sona