@@ -3,9 +3,12 @@ package rencanakan.id.talentpool.specification;
 import org.springframework.data.jpa.domain.Specification;
 import rencanakan.id.talentpool.model.User;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class SkillsSpecification {
+    private SkillsSpecification() {
+        // Private constructor to prevent instantiation
+    }
+
     public static Specification<User> hasSkills(List<String> skills) {
         return (root, query, builder) -> {
             if (skills == null || skills.isEmpty()) return null;
@@ -14,7 +17,7 @@ public class SkillsSpecification {
                     builder.lower(root.get("skill")),
                     skill.toLowerCase()
                 ))
-                .collect(Collectors.toList());
+                .toList();
             return builder.or(predicates.toArray(new jakarta.persistence.criteria.Predicate[0]));
         };
     }
